--- a/details-style.css
+++ b/details-style.css
@@ -300,7 +300,7 @@ hr {
 	color: white;
 	font-weight: bold;
 	border-radius: 5px;
-	width: 216px;
+	width: 45%;
 	padding: 16px;
 	font-size: 16px;
 }
