--- a/details-style.css
+++ b/details-style.css
@@ -23,6 +23,10 @@ p {
 	margin: 0;
 }
 
+button {
+	cursor: pointer;
+}
+
 .material-symbols-outlined {
 	font-variation-settings: "FILL" 1, "wght" 300, "GRAD" 0, "opsz" 20;
 	font-size: 20px;
