--- a/details-style.css
+++ b/details-style.css
@@ -45,25 +45,31 @@ button {
 
 /* breadcrumbs */
 
-#breadcrumbs {
+#bc-container {
+	display: flex;
+	align-items: end;
 	padding: 10px;
 }
 
-#breadcrumbs > ol {
+#breadcrumbs {
 	list-style: none;
 	display: flex;
-	align-items: center;
 	font-size: var(--breadcrumbs-fs-desktop);
-	padding: 0;
 	margin: 0;
 	overflow: hidden;
-	text-overflow: ellipsis;
+	white-space: nowrap;
+	padding: 0;
 }
 
-#breadcrumbs > ol > li {
+#bc-container::after {
+	content: "...";
+	font-size: var(--breadcrumbs-fs-desktop);
+	padding-bottom: 4px;
+}
+
+#breadcrumbs li {
 	display: flex;
 	align-items: center;
-	white-space: nowrap;
 }
 
 #breadcrumbs a {
@@ -74,7 +80,7 @@ button {
 /* desktop banner */
 
 .banner-desktop {
-	padding-bottom: 5px;
+	padding-bottom: 10px;
 }
 
 .banner-desktop > img {
@@ -89,12 +95,16 @@ button {
 	background-color: white;
 	border-radius: 8px;
 	overflow: hidden;
-	margin: 5px 0;
+}
+
+.card {
+	margin-bottom: 5px;
 }
 
 .desc-card {
 	padding: 16px;
 	border: 0.5px solid var(--border-color);
+	margin: 5px 0;
 }
 
 .desc-card > h4 {
@@ -193,13 +203,17 @@ article.title p {
 
 hr {
 	border: 0.5px solid var(--border-color);
+	margin: 10px 0;
 }
 
 .location-date {
-	font-size: 12px;
-	color: var(--desc-text);
 	display: flex;
 	justify-content: space-between;
+}
+
+.location-date > p {
+	font-size: 12px !important;
+	font-weight: 300;
 }
 
 /* banner */
@@ -341,6 +355,7 @@ hr {
 #footer {
 	background-color: rgb(235 238 239);
 	display: flex;
+	flex-wrap: wrap;
 }
 
 #footer > div {
@@ -458,6 +473,14 @@ footer {
 }
 
 @media only screen and (max-width: 768px) {
+	#bc-container::after {
+		font-size: var(--breadcrumbs-fs);
+	}
+
+	#breadcrumbs {
+		font-size: var(--breadcrumbs-fs);
+	}
+
 	.banner {
 		display: block;
 	}
@@ -468,6 +491,10 @@ footer {
 		display: none;
 	}
 
+	.price-info h2 {
+		font-size: 20px;
+	}
+
 	.desc-container {
 		display: block;
 	}
@@ -476,10 +503,6 @@ footer {
 	.col-2 {
 		width: 100%;
 		padding: 0;
-	}
-
-	#breadcrumbs > ol {
-		font-size: var(--breadcrumbs-fs);
 	}
 
 	.next {
