add box- shadow to header svg button

--- a/details-style.css
+++ b/details-style.css
@@ -191,6 +191,17 @@ header {
 	left: 22px;
 }
 
+.header-btn > a:last-child:after {
+	content: "";
+	position: absolute;
+	width: 98px;
+	height: 44px;
+	box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2),
+		0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 4px 5px 0 rgba(0, 0, 0, 0.14);
+	border-radius: 24px;
+	background: transparent;
+}
+
 .sell-btn .btn-center {
 	fill: white;
 }
