--- a/style.css
+++ b/style.css
@@ -1,1 +1,447 @@
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	font-family: "roboto";
+	color: #002f34;
+}
 
+.container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.forMobile {
+	display: flex;
+	padding: 8px;
+	flex-direction: column;
+	box-shadow: 0 1px 80px 0 rgba(0, 0, 0, 0.1);
+	background-color: #fff;
+	width: 100%;
+	position: fixed;
+	z-index: 1;
+
+	button {
+		border: none;
+		background-color: #fff;
+	}
+
+	.nav1 {
+		display: flex;
+		height: 40px;
+		width: 100%;
+		justify-content: space-between;
+		margin-bottom: 5px;
+
+		.nav1Left,
+		.nav1Right {
+			display: flex;
+			align-items: center;
+		}
+
+		.material-symbols-outlined {
+			display: block;
+			align-self: center;
+			font-size: 25px;
+			color: #002f34;
+			margin-left: 10px;
+			margin-bottom: 4px;
+		}
+
+		img {
+			height: 38px;
+			margin-left: 10px;
+		}
+
+		#locationText {
+			font-size: 16px;
+			font-weight: 600;
+			color: #002f34;
+		}
+
+		#locationLogo {
+			margin: 0 10px;
+			font-size: 25px;
+			color: #002f34;
+		}
+	}
+
+	.nav2 {
+		display: flex;
+		align-items: center;
+		width: 100%;
+		border: 2px solid #002f34;
+		border-radius: 4px;
+		padding: 8px;
+
+		.material-symbols-outlined {
+			font-size: 27px;
+			margin-left: 6px;
+		}
+
+		input {
+			border: none;
+			font-size: 16px;
+			width: 90%;
+			margin-left: 8px;
+		}
+	}
+}
+
+.mainContent {
+	display: flex;
+	flex-direction: column;
+	margin-top: 111px;
+	justify-content: center;
+	width: 100%;
+	max-width: 1280px;
+	.titleCategory {
+		display: flex;
+		justify-content: space-between;
+		margin: 0 10px;
+
+		#linkCategories {
+			font-size: 14px;
+			font-weight: 700;
+			border-bottom: 2px solid #002f34;
+		}
+	}
+
+	.card {
+		border: 1px solid rgba(56, 54, 54, 0.375);
+		border-radius: 4px;
+		position: relative;
+		width: 100%;
+		min-width: 180px;
+
+		.wishlist {
+			width: 32px;
+			height: 32px;
+			border-radius: 50%;
+			background-color: #fff;
+			position: absolute;
+			top: 4%;
+			right: 9%;
+			text-align: center;
+			padding: 5px 0 0 0;
+		}
+
+		.imgCard {
+			display: flex;
+			justify-content: center;
+			margin: 8px;
+
+			.imgCards {
+				width: 90%;
+				height: auto;
+				aspect-ratio: 16/9;
+				object-fit: cover;
+			}
+		}
+
+		h2,
+		h3,
+		h4,
+		h5 {
+			margin: 2px 13px;
+			text-overflow: ellipsis;
+			overflow: hidden;
+			text-wrap: nowrap;
+		}
+
+		h2 {
+			font-size: 20px;
+			margin: 6px 13px;
+		}
+
+		h3 {
+			font-weight: 400;
+			font-size: 14px;
+		}
+
+		h4,
+		h5 {
+			color: gray;
+		}
+
+		h4 {
+			font-size: 12px;
+			font-weight: 400;
+			padding-bottom: 14px;
+		}
+
+		h5 {
+			font-weight: 350;
+			margin-bottom: 10px;
+			font-size: 10px;
+		}
+	}
+
+	.banner {
+		display: flex;
+		flex-direction: column;
+		padding: 4px 8px;
+
+		img {
+			width: 100%;
+			aspect-ratio: 9 / 4;
+			border-radius: 18px;
+			align-self: center;
+		}
+
+		ul {
+			display: flex;
+			justify-content: center;
+			gap: 10px;
+			border-bottom: 8px solid rgb(241, 241, 241);
+			padding: 8px;
+
+			button {
+				border: none;
+				color: #fff;
+				background-color: #fff;
+			}
+
+			li {
+				color: rgb(197, 187, 187);
+			}
+		}
+	}
+
+	.categories {
+		display: flex;
+		flex-direction: column;
+		padding: 10px 8px;
+
+		.slideCategory {
+			display: flex;
+			flex-direction: row;
+			overflow-x: scroll;
+			margin-top: 15px;
+
+			.category {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+			}
+
+			a {
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: center;
+				width: 28.5vw;
+				text-decoration: none;
+
+				.imgCategory {
+					width: 48px;
+					height: 48px;
+				}
+
+				p {
+					font-size: 10px;
+					margin: 8px;
+					text-align: center;
+				}
+			}
+		}
+	}
+
+	.sliderCards {
+		width: 100%;
+		padding: 10px 8px;
+		background-color: #e7eaeb;
+		display: flex;
+		flex-direction: column;
+		border-radius: 8px;
+
+		h2 {
+			text-overflow: ellipsis;
+			overflow: hidden;
+			text-wrap: nowrap;
+		}
+
+		.titleCategory {
+			padding: 10px 10px 10px 15px;
+			margin-right: 0;
+		}
+
+		.slider {
+			display: flex;
+			flex-direction: row;
+			overflow-x: scroll;
+			gap: 0.7em;
+			padding: 10px 0 10px 30px;
+
+			.card {
+				background-color: #fff;
+			}
+
+			h1 {
+				text-overflow: ellipsis;
+			}
+		}
+	}
+
+	.productCards {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		width: 100%;
+		padding: 0 16px;
+
+		.recommendTag {
+			display: inline-block;
+			width: 100%;
+			padding: 20px;
+		}
+
+		.allCards {
+			display: grid;
+			gap: 1em;
+			grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+		}
+	}
+
+	.expand {
+		width: 100%;
+		text-align: center;
+		margin-top: 10px;
+		margin-bottom: 30px;
+
+		button {
+			border: 2px solid #002f34;
+			height: 48px;
+			padding: 0 10px;
+			background-color: #fff;
+			border-radius: 4px;
+			margin-top: 20px;
+		}
+
+		p {
+			font-size: 16px;
+			font-weight: 600;
+		}
+	}
+
+	.stickyButton {
+		text-align: center;
+		display: flex;
+		justify-content: center;
+		position: sticky;
+		bottom: 0;
+		padding: 27px 0 35px 0;
+
+		.sticky {
+			position: relative;
+
+			h2 {
+				position: absolute;
+				top: 13px;
+				left: 24px;
+				font-size: 16px;
+			}
+
+			.sell-btn {
+				.btn-center {
+					fill: #fff;
+				}
+
+				.btn-border-left {
+					fill: #fece32;
+				}
+				.btn-border-right {
+					fill: #3a77fe;
+				}
+				.btn-border-top {
+					fill: #22e5db;
+				}
+			}
+		}
+	}
+}
+
+.footerForMobile {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	position: relative;
+
+	.footerDropdown {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		border-top: 1px solid #b7b5b5;
+
+		.nameDropdown {
+			padding: 16px 24px;
+			width: 100%;
+		}
+
+		.select {
+			width: 52px;
+			height: 52px;
+			text-align: center;
+			padding-top: 10px;
+
+			span {
+				font-size: 36px;
+				font-weight: 200;
+			}
+		}
+
+		.media {
+			display: flex;
+			flex-direction: row;
+			padding-right: 30px;
+
+			.mediaLogo {
+				width: 22px;
+				height: 22px;
+				margin-left: 10px;
+			}
+		}
+	}
+
+	#followUs {
+		border-bottom: 1px solid #b7b5b5;
+	}
+
+	.getApp {
+		display: flex;
+		width: 100%;
+		justify-content: center;
+		padding: 15px;
+
+		img {
+			height: 30px;
+		}
+
+		#google {
+			padding: 3.5px;
+		}
+	}
+
+	.copyright {
+		display: flex;
+		justify-content: center;
+		text-align: center;
+		gap: 10px;
+		padding: 40px;
+		background-color: #002f34;
+
+		p {
+			font-size: 12px;
+			color: white;
+		}
+		.line1 p {
+			font-weight: 700;
+		}
+
+		.line2 p {
+			font-weight: 400;
+		}
+	}
+}
